correction des pages auth et du mega menu

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -235,5 +235,18 @@
     "Manage and convert colors": "Manage and convert colors",
     "Misc Tools": "Misc Tools",
     "Other useful tools": "Other useful tools",
-    "All Tools": "All Tools"
+    "All Tools": "All Tools",
+    "Create your WebTools account": "Create your WebTools account",
+    "Join thousands of users who use our tools daily": "Join thousands of users who use our tools daily",
+    "First Name": "First Name",
+    "Last Name": "Last Name",
+    "Phone Number": "Phone Number",
+    "Subscribe to our newsletter for updates and special offers": "Subscribe to our newsletter for updates and special offers",
+    "By registering, you agree to our": "By registering, you agree to our",
+    "and": "and",
+    "Log in to WebTools": "Log in to WebTools",
+    "Access all your favorite tools in one place": "Access all your favorite tools in one place",
+    "Don't have an account?": "Don't have an account?",
+    "Register now": "Register now",
+    "Back to login": "Back to login"
 } 
