--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -235,5 +235,18 @@
     "Manage and convert colors": "Gestionar y convertir colores",
     "Misc Tools": "Herramientas diversas",
     "Other useful tools": "Otras herramientas útiles",
-    "All Tools": "Todas las herramientas"
+    "All Tools": "Todas las herramientas",
+    "Create your WebTools account": "Crea tu cuenta de WebTools",
+    "Join thousands of users who use our tools daily": "Únete a miles de usuarios que utilizan nuestras herramientas diariamente",
+    "First Name": "Nombre",
+    "Last Name": "Apellido",
+    "Phone Number": "Número de teléfono",
+    "Subscribe to our newsletter for updates and special offers": "Suscríbete a nuestro boletín para recibir actualizaciones y ofertas especiales",
+    "By registering, you agree to our": "Al registrarte, aceptas nuestros",
+    "and": "y",
+    "Log in to WebTools": "Iniciar sesión en WebTools",
+    "Access all your favorite tools in one place": "Accede a todas tus herramientas favoritas en un solo lugar",
+    "Don't have an account?": "¿No tienes una cuenta?",
+    "Register now": "Regístrate ahora",
+    "Back to login": "Volver al inicio de sesión"
 } 
