--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -235,5 +235,19 @@
     "Manage and convert colors": "Gérer et convertir les couleurs",
     "Misc Tools": "Outils divers",
     "Other useful tools": "Autres outils utiles",
-    "All Tools": "Tous les outils"
+    "All Tools": "Tous les outils",
+    
+    "Create your WebTools account": "Créez votre compte WebTools",
+    "Join thousands of users who use our tools daily": "Rejoignez des milliers d'utilisateurs qui utilisent nos outils quotidiennement",
+    "First Name": "Prénom",
+    "Last Name": "Nom",
+    "Phone Number": "Numéro de téléphone",
+    "Subscribe to our newsletter for updates and special offers": "Abonnez-vous à notre newsletter pour recevoir des mises à jour et des offres spéciales",
+    "By registering, you agree to our": "En vous inscrivant, vous acceptez nos",
+    "and": "et",
+    "Log in to WebTools": "Connectez-vous à WebTools",
+    "Access all your favorite tools in one place": "Accédez à tous vos outils préférés en un seul endroit",
+    "Don't have an account?": "Vous n'avez pas de compte ?",
+    "Register now": "Inscrivez-vous maintenant",
+    "Back to login": "Retour à la connexion"
 } 
