fin de la constrcution du frontend minimaliste

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -248,5 +248,132 @@
     "Access all your favorite tools in one place": "Access all your favorite tools in one place",
     "Don't have an account?": "Don't have an account?",
     "Register now": "Register now",
-    "Back to login": "Back to login"
+    "Back to login": "Back to login",
+    "My Account": "My Account",
+    "Account Settings": "Account Settings",
+    "My Packages": "My Packages",
+    "Activity History": "Activity History",
+    "Member since": "Member since",
+    "Personal Information": "Personal Information",
+    "Edit Profile": "Edit Profile",
+    "Account Status": "Account Status",
+    "Status": "Status",
+    "Active": "Active",
+    "Account Type": "Account Type",
+    "Administrator": "Administrator",
+    "Standard User": "Standard User",
+    
+    "Manage your account settings, preferences, notifications and security options.": "Manage your account settings, preferences, notifications and security options.",
+    "Settings Menu": "Settings Menu",
+    "Profile Settings": "Profile Settings",
+    "Notification Settings": "Notification Settings",
+    "Security Settings": "Security Settings",
+    "Appearance": "Appearance",
+    "Preferred Language": "Preferred Language",
+    "French": "French",
+    "English": "English",
+    "Spanish": "Spanish",
+    "Save Changes": "Save Changes",
+    "Email Notifications": "Email Notifications",
+    "Receive email notifications about account activity": "Receive email notifications about account activity",
+    "Enable email notifications": "Enable email notifications",
+    "Security Alerts": "Security Alerts",
+    "Get notified about suspicious activity on your account": "Get notified about suspicious activity on your account",
+    "Enable security alerts": "Enable security alerts",
+    "Marketing Emails": "Marketing Emails",
+    "Receive promotional offers and updates about our services": "Receive promotional offers and updates about our services",
+    "Enable marketing emails": "Enable marketing emails",
+    
+    "Manage your tool packages and subscriptions.": "Manage your tool packages and subscriptions.",
+    "Current Subscription": "Current Subscription",
+    "Free Plan": "Free Plan",
+    "Basic access to all tools": "Basic access to all tools",
+    "Renewed on": "Renewed on",
+    "Upgrade Now": "Upgrade Now",
+    "Tools Used": "Tools Used",
+    "Usage Limit": "Usage Limit",
+    "month": "month",
+    "Current Usage": "Current Usage",
+    "Available Plans": "Available Plans",
+    "Current": "Current",
+    "€0": "€0",
+    "Access to all basic tools": "Access to all basic tools",
+    "100 uses per month": "100 uses per month",
+    "Standard support": "Standard support",
+    "No download options": "No download options",
+    "Current Plan": "Current Plan",
+    "Pro Plan": "Pro Plan",
+    "€9.99": "€9.99",
+    "All Free Plan features": "All Free Plan features",
+    "Unlimited tool usage": "Unlimited tool usage",
+    "Priority email support": "Priority email support",
+    "Download results": "Download results",
+    "Upgrade to Pro": "Upgrade to Pro",
+    "Business Plan": "Business Plan",
+    "€29.99": "€29.99",
+    "All Pro Plan features": "All Pro Plan features",
+    "API access": "API access",
+    "Dedicated support": "Dedicated support",
+    "White-label options": "White-label options",
+    "Upgrade to Business": "Upgrade to Business",
+    
+    "View your recent tool usage and account activity.": "View your recent tool usage and account activity.",
+    "Activity Type": "Activity Type",
+    "All Activities": "All Activities",
+    "Tool Usage": "Tool Usage",
+    "Account Changes": "Account Changes",
+    "Login Activity": "Login Activity",
+    "Date Range": "Date Range",
+    "Last 7 days": "Last 7 days",
+    "Last 30 days": "Last 30 days",
+    "Last 90 days": "Last 90 days",
+    "All time": "All time",
+    "Export History": "Export History",
+    "Date & Time": "Date & Time",
+    "Activity": "Activity",
+    "Details": "Details",
+    "IP Address": "IP Address",
+    "Success": "Success",
+    "Used": "Used",
+    "JSON Formatter": "JSON Formatter",
+    "Login": "Login",
+    "Successful login from": "Successful login from",
+    "Profile Update": "Profile Update",
+    "Updated profile information": "Updated profile information",
+    "Image Compressor": "Image Compressor",
+    "Failed Login": "Failed Login",
+    "Failed login attempt": "Failed login attempt",
+    "Failed": "Failed",
+    "Showing": "Showing",
+    "to": "to",
+    "of": "of",
+    "results": "results",
+    "Previous": "Previous",
+    "Next": "Next",
+    "Administration Dashboard": "Administration Dashboard",
+    "Statistics": "Statistics",
+    "Total Users": "Total Users",
+    "New Today": "New Today",
+    "Newsletter Subscribers": "Newsletter Subscribers",
+    "Administrators": "Administrators",
+    "Quick Actions": "Quick Actions",
+    "Add New User": "Add New User",
+    "Manage Tools": "Manage Tools",
+    "Send Newsletter": "Send Newsletter",
+    "Site Settings": "Site Settings",
+    "Recent Activity": "Recent Activity",
+    "New user registration": "New user registration",
+    "5 minutes ago": "5 minutes ago",
+    "Tool usage: Password Generator": "Tool usage: Password Generator",
+    "15 minutes ago": "15 minutes ago",
+    "Newsletter sent": "Newsletter sent",
+    "1 hour ago": "1 hour ago",
+    "View all activity": "View all activity",
+    "Recent Users": "Recent Users",
+    "View all users": "View all users",
+    "Registered": "Registered",
+    "Admin": "Admin",
+    "User": "User",
+    "Edit": "Edit",
+    "Delete": "Delete"
 } 
