--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -248,5 +248,132 @@
     "Access all your favorite tools in one place": "Accede a todas tus herramientas favoritas en un solo lugar",
     "Don't have an account?": "¿No tienes una cuenta?",
     "Register now": "Regístrate ahora",
-    "Back to login": "Volver al inicio de sesión"
+    "Back to login": "Volver al inicio de sesión",
+    "My Account": "Mi Cuenta",
+    "Account Settings": "Configuración de la Cuenta",
+    "My Packages": "Mis Paquetes",
+    "Activity History": "Historial de Actividad",
+    "Member since": "Miembro desde",
+    "Personal Information": "Información Personal",
+    "Edit Profile": "Editar Perfil",
+    "Account Status": "Estado de la Cuenta",
+    "Status": "Estado",
+    "Active": "Activo",
+    "Account Type": "Tipo de Cuenta",
+    "Administrator": "Administrador",
+    "Standard User": "Usuario Estándar",
+    
+    "Manage your account settings, preferences, notifications and security options.": "Administre la configuración de su cuenta, preferencias, notificaciones y opciones de seguridad.",
+    "Settings Menu": "Menú de Configuración",
+    "Profile Settings": "Configuración del Perfil",
+    "Notification Settings": "Configuración de Notificaciones",
+    "Security Settings": "Configuración de Seguridad",
+    "Appearance": "Apariencia",
+    "Preferred Language": "Idioma Preferido",
+    "French": "Francés",
+    "English": "Inglés",
+    "Spanish": "Español",
+    "Save Changes": "Guardar Cambios",
+    "Email Notifications": "Notificaciones por Correo",
+    "Receive email notifications about account activity": "Recibir notificaciones por correo sobre la actividad de la cuenta",
+    "Enable email notifications": "Activar notificaciones por correo",
+    "Security Alerts": "Alertas de Seguridad",
+    "Get notified about suspicious activity on your account": "Recibir notificaciones sobre actividad sospechosa en su cuenta",
+    "Enable security alerts": "Activar alertas de seguridad",
+    "Marketing Emails": "Correos de Marketing",
+    "Receive promotional offers and updates about our services": "Recibir ofertas promocionales y actualizaciones sobre nuestros servicios",
+    "Enable marketing emails": "Activar correos de marketing",
+    
+    "Manage your tool packages and subscriptions.": "Administre sus paquetes de herramientas y suscripciones.",
+    "Current Subscription": "Suscripción Actual",
+    "Free Plan": "Plan Gratuito",
+    "Basic access to all tools": "Acceso básico a todas las herramientas",
+    "Renewed on": "Renovado el",
+    "Upgrade Now": "Actualizar Ahora",
+    "Tools Used": "Herramientas Utilizadas",
+    "Usage Limit": "Límite de Uso",
+    "month": "mes",
+    "Current Usage": "Uso Actual",
+    "Available Plans": "Planes Disponibles",
+    "Current": "Actual",
+    "€0": "0€",
+    "Access to all basic tools": "Acceso a todas las herramientas básicas",
+    "100 uses per month": "100 usos por mes",
+    "Standard support": "Soporte estándar",
+    "No download options": "Sin opciones de descarga",
+    "Current Plan": "Plan Actual",
+    "Pro Plan": "Plan Pro",
+    "€9.99": "9,99€",
+    "All Free Plan features": "Todas las características del Plan Gratuito",
+    "Unlimited tool usage": "Uso ilimitado de herramientas",
+    "Priority email support": "Soporte por correo prioritario",
+    "Download results": "Descargar resultados",
+    "Upgrade to Pro": "Actualizar a Pro",
+    "Business Plan": "Plan Empresarial",
+    "€29.99": "29,99€",
+    "All Pro Plan features": "Todas las características del Plan Pro",
+    "API access": "Acceso a API",
+    "Dedicated support": "Soporte dedicado",
+    "White-label options": "Opciones de marca blanca",
+    "Upgrade to Business": "Actualizar a Empresarial",
+    
+    "View your recent tool usage and account activity.": "Vea su uso reciente de herramientas y actividad de la cuenta.",
+    "Activity Type": "Tipo de Actividad",
+    "All Activities": "Todas las Actividades",
+    "Tool Usage": "Uso de Herramienta",
+    "Account Changes": "Cambios en la Cuenta",
+    "Login Activity": "Actividad de Inicio de Sesión",
+    "Date Range": "Rango de Fechas",
+    "Last 7 days": "Últimos 7 días",
+    "Last 30 days": "Últimos 30 días",
+    "Last 90 days": "Últimos 90 días",
+    "All time": "Todo el tiempo",
+    "Export History": "Exportar Historial",
+    "Date & Time": "Fecha y Hora",
+    "Activity": "Actividad",
+    "Details": "Detalles",
+    "IP Address": "Dirección IP",
+    "Success": "Éxito",
+    "Used": "Utilizado",
+    "JSON Formatter": "Formateador JSON",
+    "Login": "Inicio de Sesión",
+    "Successful login from": "Inicio de sesión exitoso desde",
+    "Profile Update": "Actualización de Perfil",
+    "Updated profile information": "Información de perfil actualizada",
+    "Image Compressor": "Compresor de Imágenes",
+    "Failed Login": "Inicio de Sesión Fallido",
+    "Failed login attempt": "Intento de inicio de sesión fallido",
+    "Failed": "Fallido",
+    "Showing": "Mostrando",
+    "to": "a",
+    "of": "de",
+    "results": "resultados",
+    "Previous": "Anterior",
+    "Next": "Siguiente",
+    "Administration Dashboard": "Panel de Administración",
+    "Statistics": "Estadísticas",
+    "Total Users": "Usuarios Totales",
+    "New Today": "Nuevos Hoy",
+    "Newsletter Subscribers": "Suscriptores al Boletín",
+    "Administrators": "Administradores",
+    "Quick Actions": "Acciones Rápidas",
+    "Add New User": "Añadir Nuevo Usuario",
+    "Manage Tools": "Gestionar Herramientas",
+    "Send Newsletter": "Enviar Boletín",
+    "Site Settings": "Configuración del Sitio",
+    "Recent Activity": "Actividad Reciente",
+    "New user registration": "Nuevo registro de usuario",
+    "5 minutes ago": "hace 5 minutos",
+    "Tool usage: Password Generator": "Uso de herramienta: Generador de Contraseñas",
+    "15 minutes ago": "hace 15 minutos",
+    "Newsletter sent": "Boletín enviado",
+    "1 hour ago": "hace 1 hora",
+    "View all activity": "Ver toda la actividad",
+    "Recent Users": "Usuarios Recientes",
+    "View all users": "Ver todos los usuarios",
+    "Registered": "Registrado",
+    "Admin": "Admin",
+    "User": "Usuario",
+    "Edit": "Editar",
+    "Delete": "Eliminar"
 } 
