--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -249,5 +249,137 @@
     "Access all your favorite tools in one place": "Accédez à tous vos outils préférés en un seul endroit",
     "Don't have an account?": "Vous n'avez pas de compte ?",
     "Register now": "Inscrivez-vous maintenant",
-    "Back to login": "Retour à la connexion"
+    "Back to login": "Retour à la connexion",
+    
+    "Admin Panel": "Panneau d'Administration",
+    "Logged in as": "Connecté en tant que",
+    "My Account": "Mon Compte",
+    "Account Settings": "Paramètres du Compte",
+    "My Packages": "Mes Forfaits",
+    "Activity History": "Historique d'Activité",
+    "Logout": "Déconnexion",
+    "Login": "Connexion",
+    "Member since": "Membre depuis",
+    "Personal Information": "Informations Personnelles",
+    "Edit Profile": "Modifier le Profil",
+    "Account Status": "Statut du Compte",
+    "Status": "Statut",
+    "Active": "Actif",
+    "Account Type": "Type de Compte",
+    "Administrator": "Administrateur",
+    "Standard User": "Utilisateur Standard",
+    
+    "Manage your account settings, preferences, notifications and security options.": "Gérez vos paramètres de compte, préférences, notifications et options de sécurité.",
+    "Settings Menu": "Menu Paramètres",
+    "Profile Settings": "Paramètres du Profil",
+    "Notification Settings": "Paramètres de Notification",
+    "Security Settings": "Paramètres de Sécurité",
+    "Appearance": "Apparence",
+    "Preferred Language": "Langue Préférée",
+    "French": "Français",
+    "English": "Anglais",
+    "Spanish": "Espagnol",
+    "Save Changes": "Enregistrer les Modifications",
+    "Email Notifications": "Notifications par Email",
+    "Receive email notifications about account activity": "Recevoir des notifications par email concernant l'activité du compte",
+    "Enable email notifications": "Activer les notifications par email",
+    "Security Alerts": "Alertes de Sécurité",
+    "Get notified about suspicious activity on your account": "Être notifié des activités suspectes sur votre compte",
+    "Enable security alerts": "Activer les alertes de sécurité",
+    "Marketing Emails": "Emails Marketing",
+    "Receive promotional offers and updates about our services": "Recevoir des offres promotionnelles et des mises à jour sur nos services",
+    "Enable marketing emails": "Activer les emails marketing",
+    
+    "Manage your tool packages and subscriptions.": "Gérez vos forfaits d'outils et vos abonnements.",
+    "Current Subscription": "Abonnement Actuel",
+    "Free Plan": "Forfait Gratuit",
+    "Basic access to all tools": "Accès de base à tous les outils",
+    "Renewed on": "Renouvelé le",
+    "Upgrade Now": "Mettre à Niveau Maintenant",
+    "Tools Used": "Outils Utilisés",
+    "Usage Limit": "Limite d'Utilisation",
+    "month": "mois",
+    "Current Usage": "Utilisation Actuelle",
+    "Available Plans": "Forfaits Disponibles",
+    "Current": "Actuel",
+    "€0": "0€",
+    "Access to all basic tools": "Accès à tous les outils de base",
+    "100 uses per month": "100 utilisations par mois",
+    "Standard support": "Support standard",
+    "No download options": "Pas d'options de téléchargement",
+    "Current Plan": "Forfait Actuel",
+    "Pro Plan": "Forfait Pro",
+    "€9.99": "9,99€",
+    "All Free Plan features": "Toutes les fonctionnalités du forfait gratuit",
+    "Unlimited tool usage": "Utilisation illimitée des outils",
+    "Priority email support": "Support email prioritaire",
+    "Download results": "Téléchargement des résultats",
+    "Upgrade to Pro": "Passer au forfait Pro",
+    "Business Plan": "Forfait Business",
+    "€29.99": "29,99€",
+    "All Pro Plan features": "Toutes les fonctionnalités du forfait Pro",
+    "API access": "Accès API",
+    "Dedicated support": "Support dédié",
+    "White-label options": "Options de marque blanche",
+    "Upgrade to Business": "Passer au forfait Business",
+    
+    "View your recent tool usage and account activity.": "Consultez votre utilisation récente des outils et l'activité de votre compte.",
+    "Activity Type": "Type d'Activité",
+    "All Activities": "Toutes les Activités",
+    "Tool Usage": "Utilisation d'Outil",
+    "Account Changes": "Modifications du Compte",
+    "Login Activity": "Activité de Connexion",
+    "Date Range": "Période",
+    "Last 7 days": "7 derniers jours",
+    "Last 30 days": "30 derniers jours",
+    "Last 90 days": "90 derniers jours",
+    "All time": "Tout le temps",
+    "Export History": "Exporter l'Historique",
+    "Date & Time": "Date et Heure",
+    "Activity": "Activité",
+    "Details": "Détails",
+    "IP Address": "Adresse IP",
+    "Success": "Succès",
+    "Used": "Utilisé",
+    "JSON Formatter": "Formateur JSON",
+    "Login": "Connexion",
+    "Successful login from": "Connexion réussie depuis",
+    "Profile Update": "Mise à jour du Profil",
+    "Updated profile information": "Informations de profil mises à jour",
+    "Image Compressor": "Compresseur d'Image",
+    "Failed Login": "Échec de Connexion",
+    "Failed login attempt": "Tentative de connexion échouée",
+    "Failed": "Échec",
+    "Showing": "Affichage de",
+    "to": "à",
+    "of": "sur",
+    "results": "résultats",
+    "Previous": "Précédent",
+    "Next": "Suivant",
+    "Administration Dashboard": "Tableau de Bord d'Administration",
+    "Statistics": "Statistiques",
+    "Total Users": "Utilisateurs Totaux",
+    "New Today": "Nouveaux Aujourd'hui",
+    "Newsletter Subscribers": "Abonnés à la Newsletter",
+    "Administrators": "Administrateurs",
+    "Quick Actions": "Actions Rapides",
+    "Add New User": "Ajouter un Utilisateur",
+    "Manage Tools": "Gérer les Outils",
+    "Send Newsletter": "Envoyer la Newsletter",
+    "Site Settings": "Paramètres du Site",
+    "Recent Activity": "Activité Récente",
+    "New user registration": "Nouvel utilisateur inscrit",
+    "5 minutes ago": "il y a 5 minutes",
+    "Tool usage: Password Generator": "Utilisation d'outil: Générateur de Mot de Passe",
+    "15 minutes ago": "il y a 15 minutes",
+    "Newsletter sent": "Newsletter envoyée",
+    "1 hour ago": "il y a 1 heure",
+    "View all activity": "Voir toute l'activité",
+    "Recent Users": "Utilisateurs Récents",
+    "View all users": "Voir tous les utilisateurs",
+    "Registered": "Inscrit",
+    "Admin": "Admin",
+    "User": "Utilisateur",
+    "Edit": "Modifier",
+    "Delete": "Supprimer"
 } 
